#716 start/stop, next/prev, visibility functionality, show/hide settings, combatant name display

--- a/RPGSmithApp/RPGSmithApp/ClientApp/src/app/rulesets/combat/change-combat-visiblity/change-combat-visibility.component.scss
+++ b/RPGSmithApp/RPGSmithApp/ClientApp/src/app/rulesets/combat/change-combat-visiblity/change-combat-visibility.component.scss
@@ -1,20 +1,23 @@
-.form-check{
-    padding-right: 0px!important;
-    padding-left: 0px!important;
+.form-check {
+  padding-right: 0px !important;
+  padding-left: 0px !important;
 }
+
 .indicators .input-list-items .form-check-label span em:before {
-    padding-right: 8px;
-    float: left;
+  padding-right: 8px;
+  float: left;
 }
+
 .modal-footer {
-    padding: 12px 15px 10px;
-    border-top: 1px solid #dedbda;
+  padding: 12px 15px 10px;
+  border-top: 1px solid #dedbda;
 }
 
 .modal-footer .btn {
-    margin-top: 0px !important;
+  margin-top: 0px !important;
 }
-.input-box{
+
+.input-box {
   width: auto !important;
   display: inline-block !important;
   /* min-width: 10px; */
@@ -35,10 +38,12 @@ input[type=number]::-webkit-outer-spin-button {
   appearance: none;
   margin: 0;
 }
+
 i.icon.monster-icon {
   width: 40px !important;
   height: 22px !important;
 }
+
 span.input-box {
   border-right: 0px !important;
 }
@@ -76,6 +81,18 @@ input.input-color-custom {
 .input-color-items li .tile {
   margin-top: 0px;
 }
+
 .input-color-items .icon {
   border-radius: 0 !important;
+}
+
+li.custom-margin {
+  margin-right: 0.175rem !important;
+  margin-left: 0.175rem !important;
+}
+
+.selectedVisible-unvisivble {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 2px 4px;
 }
